--- a/src/pages/categories/category-pagination.njk
+++ b/src/pages/categories/category-pagination.njk
@@ -9,6 +9,9 @@ eleventyComputed:
   title: "Category: {{ category }}"
 ---
 
+{% set previousPageHref = "/categories" %}
+{% set previousPageLabel = "view all categories" %}
+{% include "partials/page-return-navigation.njk" %}
 <h1 data-heading="3">
   <span aria-hidden="true">🔖</span>
   {{ category }}
