--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -16,10 +16,15 @@ permalink: /
     </section>
     <section data-layou="stack">
         <div data-layout="cluster" data-props="x:between y:center">
-            <h2 data-heading="4">How to write effective web content ?</h2>
+            <h2 data-layout="cluster" data-props="space:xs" data-heading="4">
+                {% include "icons/content-icon.njk" %}
+                <span>
+                    Effective web content
+                </span>
+            </h2>
             <a data-link href="/categories/effective-web-content/">
                 See more
-                <span aria-hidden="true">👁</span>
+                {# <span aria-hidden="true">👁</span> #}
             </a>
         </div>
         <ul data-layout="reel" data-props="noBorder">
