--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,11 +1,14 @@
 <header>
     <div class="header" data-layout="cluster" data-props="y:center x:between">
-        <a data-heading="5" href="/" aria-label="Front Stories">
-            {{meta.site_name}}
+        <a data-layout="cluster" data-props="space:xs" data-heading="5" href="/">
+            {% include "icons/fs-icon.njk" %}
+            <span>
+                {{ meta.site_name }}
+            </span>
         </a>
         <a data-button="small" data-props="noBorder" href="#">
             <span aria-hidden="true">
-                🔎
+                {% include "../icons/search-icon.njk" %}
             </span>
             <span class="visually-hidden">
                 Search
