--- a/src/css/components/_buttons.css
+++ b/src/css/components/_buttons.css
@@ -13,7 +13,10 @@
   color: var(--gray-900);
   background-color: var(--gray-100);
   cursor: pointer;
-  display: inline-block;
+  display: inline-flex;
+  gap: var(--space, 0);
+  justify-content: var(--horizontal-alignment, flex-start);
+  align-items: var(--vertical-alignment, center);
   border-style: solid;
   border-width: var(--border-thin, 1px);
   border-color: var(--gray-400);
@@ -37,7 +40,7 @@
 }
 [data-button~="active"],
 [data-button]:active {
-  background-color: var(--gray-900);
+  background-color: var(--gray-600);
   color: var(--gray-100);
 }
 [data-button~="disabled"],
