--- a/src/pages/categories/categories-page.njk
+++ b/src/pages/categories/categories-page.njk
@@ -5,8 +5,18 @@ tags:
     - webpage
 permalink: /categories/
 ---
-<div data-layout="cluster">
-    {%- for category in collections.categories %}
-        <a href="/categories/{{ category | slugify }}" data-tag>{{ category }}</a>
-    {% endfor -%}
-</div>
+
+{% set previousPageHref = "/" %}
+{% set previousPageLabel = "go to Homepage" %}
+{% include "partials/page-return-navigation.njk" %}
+<h1 data-heading="3">
+    <span aria-hidden="true">🔖</span>
+    {{ title }}
+</h1>
+<section data-layout="cover">
+    <div data-layout="cluster">
+        {%- for category in collections.categories %}
+            <a href="/categories/{{ category | slugify }}" data-button>{{ category }}</a>
+        {% endfor -%}
+    </div>
+</section>
