--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -2,18 +2,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ meta.site_name + " - " + title }}</title>
-    <meta name="description" content="{{meta.site_description}}">
+    <title>{{ meta.site_name + " - " + title or " " }}</title>
+    <meta name="description" content="{{description or meta.site_description}}">
     <link rel="stylesheet" href="/css/style.css">
     <meta name="theme-color" content="{{meta.theme_color}}">
     <meta name="apple-mobile-web-app-status-bar-style" content="{{meta.theme_color}}">
     <meta name="title" content="{{title}}">
+    <meta name="generator" content="{{ eleventy.generator }}">
     <!-- Open graph - Facebook 1200 x 628 -->
     <meta property="og:image" content="{{meta.site_thumbnail}}">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="{{meta.site_url}}">
-    <meta property="og:title" content="{{title}}">
-    <meta property="og:description" content="{{meta.site_description}}">
+    <meta property="og:site_name" content="{{meta.site_name}}">
+    <meta property="og:type" content="{{og_type}}">
+    <meta property="og:url" content="{{page.url or meta.site_url}}">
+    <meta property="og:title" content="{{title or meta.site_name}}">
+    <meta property="og:description" content="{{description or meta.site_description}}">
     <!-- Open graph - Twitter -->
     <meta name="twitter:image" content="{{meta.site_thumbnail}}">
     <meta name="twitter:card" content="summary_large_image">
