--- a/src/css/components/_buttons.css
+++ b/src/css/components/_buttons.css
@@ -21,7 +21,10 @@
   border-width: var(--border-thin, 1px);
   border-color: var(--gray-400);
   font-size: var(--step-0);
+}
 
+[data-button] svg{
+  flex-shrink: 0;
 }
 [data-button~="variant:primary"]{
   background-color: var(--gray-800);
