--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -6,7 +6,7 @@
             {% set previousPageLabel = "view all stories" %}
             <nav aria-label="Table of contents">
                 {% include "partials/page-return-navigation.njk" %}
-                <ol data-layout="stack" data-props="split">
+                <ol data-layout="stack" data-props="split" role="list">
                     <li>
                         <a data-link href="#cover">Cover</a>
                     </li>
