--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -50,7 +50,7 @@
 }
 /*----------  TOKENS Utilities  ----------*/
 [data-props~="noPad"] {
-  padding: 0;
+  --padding: 0;
 }
 
 [data-props~="x:center"] {
