feat - transform URL into human readable format

--- a/src/pages/categories/category-pagination.njk
+++ b/src/pages/categories/category-pagination.njk
@@ -19,7 +19,7 @@ eleventyComputed:
 <p>
   Here are some stories relating to the subject of {{ category }}.
   <ul data-layout="grid" data-props="noPad">
-    {% set entries = stories | filterByCategory(category) %}
+    {% set entries = collections.stories | filterByCategory(category) %}
     {%- for entry in entries %}
       {% include "partials/story-card-entry.njk" %}
     {% endfor -%}
