--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,5 +1,5 @@
 <li class="story-card" data-layout="box stack">
-    <a data-link class="story-card__title" data-props="split"  href="/stories/{{ entry.name | slugify }}">{{ entry.name }}</a>
+    <a data-link class="story-card__title" data-props="split"  href="/{{ entry.slug  }}">{{ entry.name }}</a>
     {% if entry.categories.length %}
         <div class="story-card__categories" data-layout="cluster" >
             {%- for category in entry.categories %}
