feat - use notion icon as favicon when provided

--- a/src/pages/stories/story-page.njk
+++ b/src/pages/stories/story-page.njk
@@ -9,6 +9,7 @@ og_type: article
 eleventyComputed:
   title: "Story : {{ story.name | truncate(15) }} "
   thumbnail: "{{ story.cover }}"
+  emojicon: "{{ story.icon }}"
 ---
 
 {% set nextStory = collections.stories | getNextCollectionItem(pagination.page) %}
